turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:17: error: Unit does not take parameters
maison()
      ^