turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {
def maison {avance(30)
droite(30)
avance(30)
droite(120)
avance(30)
droite(120)
avance(30)
recule(30)
gauche(90)
avance(30)
droite(90)
avance(30)
droite(90)
}
maison()

}